--- a/config/database.yml
+++ b/config/database.yml
@@ -23,10 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: Rails-CMS
+  database: Rails-CMS-dev
   username: postgres
   password: moyasiginko17
-  host: localhost
 
 
   # The specified database role being used to connect to postgres.
@@ -61,10 +60,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Rails-CMS
+  database: Rails-CMS-test
   username: postgres
   password: moyasiginko17
-  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -88,7 +86,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: Rails-CMS
   username: postgres
   password: moyasiginko17
-  host: localhost
